--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html>
+
+</body>
+</html><!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -41,13 +43,15 @@
     <div class="post w-full max-w-xl mx-auto bg-white dark:bg-gray-800 rounded-lg shadow-md overflow-hidden my-4">
         <div class="p-4">
             <div class="flex items-center mb-4">
-                <img src="pp.jpeg" alt="Profile" class="w-10 h-10 rounded-full mr-3">
+                <img id="profileImage" src="pp.jpeg" alt="Profile" class="w-10 h-10 rounded-full mr-3">
                 <div>
-                    <h2 class="font-semibold text-gray-800 dark:text-gray-200 text-sm sm:text-base">shadow0cleo</h2>
+                    <h2 id="postName" class="font-semibold text-gray-800 dark:text-gray-200 text-sm sm:text-base">shadow0cleo</h2>
                     <p class="text-xs text-gray-500 dark:text-gray-400">2 hours ago</p>
                 </div>
             </div>
-            <p class="text-gray-700 dark:text-gray-300 mb-4 text-sm sm:text-base">teman ada masanya, dan teman juga punya kehidupan masing-masing...</p>
+            <p class="text-gray-700 dark:text-gray-300 mb-4 text-sm sm:text-base">
+                <span id="editableMessagePart">teman ada masanya, dan teman juga punya kehidupan masing masing</span>, apalagi berjauhan, jelas temanmu juga punya teman di sana...
+            </p>
             <div class="flex flex-col sm:flex-row justify-between text-gray-500 dark:text-gray-400 text-xs sm:text-sm">
                 <div class="flex items-center mb-2 sm:mb-0">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -63,35 +67,14 @@
         </div>
         <div class="border-t border-gray-200 dark:border-gray-700">
             <div class="flex justify-between p-2">
-                <button class="flex items-center text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 px-2 sm:px-4 py-2 rounded-md text-xs sm:text-sm">
+                <button class="flex items-center text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 px-2 sm:px-4 py-2 rounded-md text-xs sm:text-sm" id="editButton">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 011.789 2.894l-3.5 7A2 2 0 0115.263 21h-4.017c-.163 0-.326-.02-.485-.06L7 20m7-10V5a2 2 0 00-2-2h-.095c-.5 0-.905.405-.905.905 0 .714-.211 1.412-.608 2.006L7 11v9m7-10h-2M7 20H5a2 2 0 01-2-2v-6a2 2 0 012-2h2.5" />
                     </svg>
-                    <span class="hidden sm:inline">Like</span>
-                </button>
-                <button class="flex items-center text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 px-2 sm:px-4 py-2 rounded-md text-xs sm:text-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" />
-                    </svg>
-                    <span class="hidden sm:inline">Comment</span>
-                </button>
-                <button class="flex items-center text-gray-600 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 px-2 sm:px-4 py-2 rounded-md text-xs sm:text-sm">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 sm:h-5 sm:w-5 mr-1 sm:mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z" />
-                    </svg>
-                    <span class="hidden sm:inline">Share</span>
+                    <span>Edit</span>
                 </button>
             </div>
         </div>
-    </div>
-    
-    <!-- Tombol edit -->
-    <div class="fixed bottom-4 right-16">
-        <button id="editButton" class="bg-blue-500 text-white rounded-full p-3 hover:bg-blue-600">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 3a2 2 0 00-2 2v2H7a2 2 0 00-2 2v8a2 2 0 002 2h10a2 2 0 002-2v-8a2 2 0 00-2-2h-2V5a2 2 0 00-2-2h-2zm0 0v8m0-8l-6 6m6-6l6 6" />
-            </svg>
-        </button>
     </div>
 
     <!-- Form Input untuk Edit Post -->
@@ -105,7 +88,11 @@
                 </div>
                 <div class="mb-4">
                     <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
-                    <textarea id="message" name="message" rows="4" class="mt-1 p-2 border border-gray-300 rounded-md w-full" placeholder="Enter your message"></textarea>
+                    <textarea id="message" name="message" rows="2" class="mt-1 p-2 border border-gray-300 rounded-md w-full" placeholder="Edit the message"></textarea>
+                </div>
+                <div class="mb-4">
+                    <label for="profilePicture" class="block text-sm font-medium text-gray-700">Profile Picture</label>
+                    <input type="file" id="profilePicture" name="profilePicture" class="mt-1 p-2 border border-gray-300 rounded-md w-full">
                 </div>
                 <div class="flex justify-end">
                     <button type="button" id="cancelButton" class="bg-gray-500 text-white px-4 py-2 rounded-md mr-2">Cancel</button>
@@ -131,19 +118,39 @@
 
         // Form submit event
         const editPostForm = document.getElementById('editPostForm');
-        const nameElement = document.querySelector('.post h2');
-        const messageElement = document.querySelector('.post p');
+        const nameElement = document.getElementById('postName');
+        const messagePartElement = document.getElementById('editableMessagePart');
+        const profileImage = document.getElementById('profileImage');
 
         editPostForm.addEventListener('submit', (e) => {
             e.preventDefault();
             const nameInput = document.getElementById('name').value;
             const messageInput = document.getElementById('message').value;
+            const profilePictureInput = document.getElementById('profilePicture').files[0];
 
             // Update post content
-            nameElement.textContent = nameInput;
-            messageElement.textContent = messageInput;
+            if (nameInput) {
+                nameElement.textContent = nameInput;
+            }
 
-            // Hide the form after saving
+            if (messageInput) {
+                messagePartElement.textContent = messageInput;
+            }
+
+            // Update profile picture
+            if (profilePictureInput) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    profileImage.src = e.target.result;
+                };
+                reader.readAsDataURL(profile
+                                     reader.onload = function(e) {
+                    profileImage.src = e.target.result;
+                };
+                reader.readAsDataURL(profilePictureInput);
+            }
+
+            // Close the edit form after saving
             editForm.classList.add('hidden');
         });
     </script>
