--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                 </div>
             </div>
             <p class="text-gray-700 dark:text-gray-300 mb-4 text-sm sm:text-base">
-                <span id="editableMessagePart">teman ada masanya, dan teman juga punya kehidupan masing masing</span>, apalagi berjauhan, jelas temanmu juga punya teman di sana...
-            </p>
+                <span id="editableMessagePart">teman ada masanya, dan teman juga punya kehidupan masing masing</span></p>
             <div class="flex flex-col sm:flex-row justify-between text-gray-500 dark:text-gray-400 text-xs sm:text-sm">
                 <div class="flex items-center mb-2 sm:mb-0">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
